# videollama3_gradio

./: .gitignore  CLAUDE.md  README.md  app.py  app_template.py  app_wo_visualization.py  config.yaml  fix_weights.py  infer.py  pyproject.toml  requirements-infer.txt
VideoLLaMA3/: README.md  README2.md
VideoLLaMA3/outputs/: cache_gptfix_2b_stageII_batch32_180f_3e_directly_json.json  eval_results_gptfix_2b_stageII_batch32_180f_3e_directly_20250710_153134.json
VideoLLaMA3/scripts/train/: video_ft.sh  video_ft_2b.sh  video_ft_II.sh  video_ft_II_2b.sh
VideoLLaMA3/videollama3/: infer.py  test.py  test4nlp.py  train.py
utils/: README.md  __init__.py  save_frames.py  test_video_sampler.py  video_sampler.py.bak
